# Template.PythonProject

./: README.md  config.yaml  pyproject.toml
.github/actions/check-format/: action.yml  action.yaml
.github/actions/check-py-changes/: action.yaml
.github/actions/install-pip/: action.yml  action.yaml
.github/actions/pytest/: action.yaml
.github/actions/read-yaml/: action.yaml  action.yml
.github/actions/swap-version/: action.yaml
.github/workflows/: on-manual-release-workflow.yml  on-pr-main-workflow.yml  on-push-workflow.yml
src/my_project/: _version.py  some_code.py
tests/unit-test/: test_basic.py
tools/: read_yaml.py  swap_txt.py
