[tool.poetry]
name = "template-pythonproject"
version = "0.1.0"
description = "template for python project"
authors = ["HyeongSeok Kim <tiryul@gmail.com>"]
readme = "README.md"
packages = [{include = "my_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
